--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.9",
+    "@rainbow-me/rainbowkit": "^0.11.0",
     "@react-spring/three": "^9.6.1",
     "@react-three/fiber": "^8.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.149.0",
-    "ethers": "^5.6.5",
+    "ethers": "^5.7.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "three": "^0.149.0",
+    "wagmi": "^0.11.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
